// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OlympicsSchedule> click show all 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  margin: 0 auto 20px auto;
}

.c0 .pa-schedule .pa_ScheduleHeader_header {
  color: #1D1D1B;
  font-family: GillSansMTStd-Medium;
  font-size: 18px;
  background: #EDEDED;
}

.c0 .pa-schedule .pa_ScheduleHeader_filterbar {
  color: #1D1D1B;
  font-family: GillSansMTStd-Medium;
  background: #EDEDED;
  font-size: 16px;
}

.c0 .pa-schedule .pa_LoadingOverlayContainer_ctr .pa_UnitListView_ctr {
  font-family: GillSansMTStd-Medium;
  font-size: 16px;
}

.c0 .pa-schedule .pa_LoadingOverlayContainer_ctr .pa_UnitListView_ctr ul.pa_UnitListView_list li {
  background-color: #F9F9F9;
  color: #1D1D1B;
}

.c0 .pa-schedule .pa_LoadingOverlayContainer_ctr .pa_UnitListView_ctr ul.pa_UnitListView_list li:nth-child(n + 8) {
  display: block;
}

.c0 .pa-schedule .pa_LoadingOverlayContainer_ctr .pa_UnitListView_ctr .pa_UnitListView_unit-time {
  color: sectionColor;
  line-height: 30px;
}

.c0 .pa-schedule .pa_LoadingOverlayContainer_ctr .pa_UnitListView_ctr .pa_UnitListView_unit-text {
  font-family: GillSansMTStd-Medium;
  font-size: 14px;
}

.c0 .pa-schedule .pa_LoadingOverlayContainer_ctr .pa_UnitListView_ctr .pa_UnitListView_discipline {
  font-family: TimesModern-Bold;
  text-transform: capitalize;
  font-weight: 400;
}

.c0 .pa-schedule .pa_OdfFooter_ctr {
  font-family: GillSansMTStd-Medium;
  top: 60px;
  position: relative;
  font-size: 12px;
}

.c0 .pa-schedule .pa_UnitListView_message {
  min-height: 70px;
  background-color: #F9F9F9;
}

.c0 .pa-schedule .pa_Schedule_ctr {
  padding-bottom: 60px;
  background: #EDEDED;
}

.c0 .pa-schedule .pa_ErrorMessage_ctr {
  background: #ededed;
}

.c0 .buttonContainer {
  text-align: center;
  height: 0;
}

.c0 .buttonContainer button {
  background-color: #F9F9F9;
}

.c1 {
  font-family: GillSansMTStd-Medium;
  font-size: 14px;
  line-height: 20px;
  padding: 14px 16px;
  border: 1px solid #DBDBDB;
  top: -80px;
  position: relative;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

<div
    class="c0"
  >
    <div
      class="pa-schedule"
      data-auth-token="token"
      data-games-code="OG1896"
    />
    <div
      class="buttonContainer"
    >
      <button
        class="c1"
      >
        Collapse
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<OlympicsSchedule> renders 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  margin: 0 auto 20px auto;
}

.c0 .pa-schedule .pa_ScheduleHeader_header {
  color: #1D1D1B;
  font-family: GillSansMTStd-Medium;
  font-size: 18px;
  background: #EDEDED;
}

.c0 .pa-schedule .pa_ScheduleHeader_filterbar {
  color: #1D1D1B;
  font-family: GillSansMTStd-Medium;
  background: #EDEDED;
  font-size: 16px;
}

.c0 .pa-schedule .pa_LoadingOverlayContainer_ctr .pa_UnitListView_ctr {
  font-family: GillSansMTStd-Medium;
  font-size: 16px;
}

.c0 .pa-schedule .pa_LoadingOverlayContainer_ctr .pa_UnitListView_ctr ul.pa_UnitListView_list li {
  background-color: #F9F9F9;
  color: #1D1D1B;
}

.c0 .pa-schedule .pa_LoadingOverlayContainer_ctr .pa_UnitListView_ctr ul.pa_UnitListView_list li:nth-child(n + 8) {
  display: none;
}

.c0 .pa-schedule .pa_LoadingOverlayContainer_ctr .pa_UnitListView_ctr .pa_UnitListView_unit-time {
  color: #008347;
  line-height: 30px;
}

.c0 .pa-schedule .pa_LoadingOverlayContainer_ctr .pa_UnitListView_ctr .pa_UnitListView_unit-text {
  font-family: GillSansMTStd-Medium;
  font-size: 14px;
}

.c0 .pa-schedule .pa_LoadingOverlayContainer_ctr .pa_UnitListView_ctr .pa_UnitListView_discipline {
  font-family: TimesModern-Bold;
  text-transform: capitalize;
  font-weight: 400;
}

.c0 .pa-schedule .pa_OdfFooter_ctr {
  font-family: GillSansMTStd-Medium;
  top: 60px;
  position: relative;
  font-size: 12px;
}

.c0 .pa-schedule .pa_UnitListView_message {
  min-height: 70px;
  background-color: #F9F9F9;
}

.c0 .pa-schedule .pa_Schedule_ctr {
  padding-bottom: 60px;
  background: #EDEDED;
}

.c0 .pa-schedule .pa_ErrorMessage_ctr {
  background: #ededed;
}

.c0 .buttonContainer {
  text-align: center;
  height: 0;
}

.c0 .buttonContainer button {
  background-color: #F9F9F9;
}

.c1 {
  font-family: GillSansMTStd-Medium;
  font-size: 14px;
  line-height: 20px;
  padding: 14px 16px;
  border: 1px solid #DBDBDB;
  top: -80px;
  position: relative;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

<div
    class="c0"
  >
    <div
      class="pa-schedule"
      data-auth-token="token"
      data-games-code="OG1896"
    />
    <div
      class="buttonContainer"
    >
      <button
        class="c1"
      >
        Show All
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<OlympicsSchedule> renders with wrapHelmetProvider 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  margin: 0 auto 20px auto;
}

.c0 .pa-schedule .pa_ScheduleHeader_header {
  color: #1D1D1B;
  font-family: GillSansMTStd-Medium;
  font-size: 18px;
  background: #EDEDED;
}

.c0 .pa-schedule .pa_ScheduleHeader_filterbar {
  color: #1D1D1B;
  font-family: GillSansMTStd-Medium;
  background: #EDEDED;
  font-size: 16px;
}

.c0 .pa-schedule .pa_LoadingOverlayContainer_ctr .pa_UnitListView_ctr {
  font-family: GillSansMTStd-Medium;
  font-size: 16px;
}

.c0 .pa-schedule .pa_LoadingOverlayContainer_ctr .pa_UnitListView_ctr ul.pa_UnitListView_list li {
  background-color: #F9F9F9;
  color: #1D1D1B;
}

.c0 .pa-schedule .pa_LoadingOverlayContainer_ctr .pa_UnitListView_ctr ul.pa_UnitListView_list li:nth-child(n + 8) {
  display: none;
}

.c0 .pa-schedule .pa_LoadingOverlayContainer_ctr .pa_UnitListView_ctr .pa_UnitListView_unit-time {
  color: #008347;
  line-height: 30px;
}

.c0 .pa-schedule .pa_LoadingOverlayContainer_ctr .pa_UnitListView_ctr .pa_UnitListView_unit-text {
  font-family: GillSansMTStd-Medium;
  font-size: 14px;
}

.c0 .pa-schedule .pa_LoadingOverlayContainer_ctr .pa_UnitListView_ctr .pa_UnitListView_discipline {
  font-family: TimesModern-Bold;
  text-transform: capitalize;
  font-weight: 400;
}

.c0 .pa-schedule .pa_OdfFooter_ctr {
  font-family: GillSansMTStd-Medium;
  top: 60px;
  position: relative;
  font-size: 12px;
}

.c0 .pa-schedule .pa_UnitListView_message {
  min-height: 70px;
  background-color: #F9F9F9;
}

.c0 .pa-schedule .pa_Schedule_ctr {
  padding-bottom: 60px;
  background: #EDEDED;
}

.c0 .pa-schedule .pa_ErrorMessage_ctr {
  background: #ededed;
}

.c0 .buttonContainer {
  text-align: center;
  height: 0;
}

.c0 .buttonContainer button {
  background-color: #F9F9F9;
}

.c1 {
  font-family: GillSansMTStd-Medium;
  font-size: 14px;
  line-height: 20px;
  padding: 14px 16px;
  border: 1px solid #DBDBDB;
  top: -80px;
  position: relative;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

<div
    class="c0"
  >
    <div
      class="pa-schedule"
      data-auth-token="token"
      data-games-code="OG1896"
    />
    <div
      class="buttonContainer"
    >
      <button
        class="c1"
      >
        Show All
      </button>
    </div>
  </div>
</DocumentFragment>
`;
